crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@186.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select longname(f) from fullname f;
---
SelectStmt@0..35
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..17
    FuncCall@7..17
      Ident@7..15 "longname"
      Ascii40@15..16 "("
      ColumnRef@16..17
        Ident@16..17 "f"
  Ascii41@17..18 ")"
  Whitespace@18..19 " "
  From@19..23 "from"
  Whitespace@23..24 " "
  RangeVar@24..34
    Ident@24..32 "fullname"
    Whitespace@32..33 " "
    Alias@33..34
      Ident@33..34 "f"
  Ascii59@34..35 ";"

