crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@204.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into tt2 values(0,0);"
---
InsertStmt@0..28
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "tt2"
  Whitespace@15..16 " "
  SelectStmt@16..26
    Values@16..22 "values"
    Ascii40@22..23 "("
    List@23..26
      AConst@23..24
        Iconst@23..24 "0"
      Ascii44@24..25 ","
      AConst@25..26
        Iconst@25..26 "0"
  Ascii41@26..27 ")"
  Ascii59@27..28 ";"

