crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@207.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into tt3 values(33,44);"
---
InsertStmt@0..30
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "tt3"
  Whitespace@15..16 " "
  SelectStmt@16..28
    Values@16..22 "values"
    Ascii40@22..23 "("
    List@23..28
      AConst@23..25
        Iconst@23..25 "33"
      Ascii44@25..26 ","
      AConst@26..28
        Iconst@26..28 "44"
  Ascii41@28..29 ")"
  Ascii59@29..30 ";"

