crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@210.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select r, r is null as isnull, r is not null as isnotnull\nfrom (values (1,row(1,2)), (1,row(null,null)), (1,null),\n             (null,row(1,2)), (null,row(null,null)), (null,null) ) r(a,b);"
---
SelectStmt@0..189
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      Ident@7..8 "r"
  Ascii44@8..9 ","
  Whitespace@9..10 " "
  ResTarget@10..29
    NullTest@10..19
      ColumnRef@10..11
        Ident@10..11 "r"
      Whitespace@11..12 " "
      Is@12..14 "is"
      Whitespace@14..15 " "
      NullP@15..19 "null"
    Whitespace@19..20 " "
    As@20..22 "as"
    Whitespace@22..23 " "
    Isnull@23..29 "isnull"
  Ascii44@29..30 ","
  Whitespace@30..31 " "
  ResTarget@31..57
    NullTest@31..44
      ColumnRef@31..32
        Ident@31..32 "r"
      Whitespace@32..33 " "
      Is@33..35 "is"
      Whitespace@35..36 " "
      Not@36..39 "not"
      Whitespace@39..40 " "
      NullP@40..44 "null"
    Whitespace@44..45 " "
    As@45..47 "as"
    Whitespace@47..48 " "
    Ident@48..57 "isnotnull"
  Newline@57..58 "\n"
  From@58..62 "from"
  Whitespace@62..63 " "
  Ascii40@63..64 "("
  RangeSubselect@64..187
    SelectStmt@64..178
      Values@64..70 "values"
      Whitespace@70..71 " "
      Ascii40@71..72 "("
      List@72..81
        AConst@72..73
          Iconst@72..73 "1"
        Ascii44@73..74 ","
        RowExpr@74..81
          Row@74..77 "row"
          Ascii40@77..78 "("
          AConst@78..79
            Iconst@78..79 "1"
          Ascii44@79..80 ","
          AConst@80..81
            Iconst@80..81 "2"
      Ascii41@81..82 ")"
      Ascii41@82..83 ")"
      Ascii44@83..84 ","
      Whitespace@84..85 " "
      Ascii40@85..86 "("
      List@86..101
        AConst@86..87
          Iconst@86..87 "1"
        Ascii44@87..88 ","
        RowExpr@88..101
          Row@88..91 "row"
          Ascii40@91..92 "("
          AConst@92..96
            NullP@92..96 "null"
          Ascii44@96..97 ","
          AConst@97..101
            NullP@97..101 "null"
      Ascii41@101..102 ")"
      Ascii41@102..103 ")"
      Ascii44@103..104 ","
      Whitespace@104..105 " "
      Ascii40@105..106 "("
      List@106..112
        AConst@106..107
          Iconst@106..107 "1"
        Ascii44@107..108 ","
        AConst@108..112
          NullP@108..112 "null"
      Ascii41@112..113 ")"
      Ascii44@113..114 ","
      Newline@114..115 "\n"
      Whitespace@115..128 "             "
      Ascii40@128..129 "("
      List@129..141
        AConst@129..133
          NullP@129..133 "null"
        Ascii44@133..134 ","
        RowExpr@134..141
          Row@134..137 "row"
          Ascii40@137..138 "("
          AConst@138..139
            Iconst@138..139 "1"
          Ascii44@139..140 ","
          AConst@140..141
            Iconst@140..141 "2"
      Ascii41@141..142 ")"
      Ascii41@142..143 ")"
      Ascii44@143..144 ","
      Whitespace@144..145 " "
      Ascii40@145..146 "("
      List@146..164
        AConst@146..150
          NullP@146..150 "null"
        Ascii44@150..151 ","
        RowExpr@151..164
          Row@151..154 "row"
          Ascii40@154..155 "("
          AConst@155..159
            NullP@155..159 "null"
          Ascii44@159..160 ","
          AConst@160..164
            NullP@160..164 "null"
      Ascii41@164..165 ")"
      Ascii41@165..166 ")"
      Ascii44@166..167 ","
      Whitespace@167..168 " "
      Ascii40@168..169 "("
      List@169..178
        AConst@169..173
          NullP@169..173 "null"
        Ascii44@173..174 ","
        AConst@174..178
          NullP@174..178 "null"
    Ascii41@178..179 ")"
    Whitespace@179..180 " "
    Ascii41@180..181 ")"
    Whitespace@181..182 " "
    Alias@182..187
      Ident@182..183 "r"
      Ascii40@183..184 "("
      Ident@184..185 "a"
      Ascii44@185..186 ","
      Ident@186..187 "b"
  Ascii41@187..188 ")"
  Ascii59@188..189 ";"

