crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@214.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO compositetable(a, b) VALUES('fa', 'fb');"
---
InsertStmt@0..52
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..26
    Ident@12..26 "compositetable"
  Ascii40@26..27 "("
  ResTarget@27..28
    Ident@27..28 "a"
  Ascii44@28..29 ","
  Whitespace@29..30 " "
  ResTarget@30..31
    Ident@30..31 "b"
  Ascii41@31..32 ")"
  Whitespace@32..33 " "
  SelectStmt@33..50
    Values@33..39 "VALUES"
    Ascii40@39..40 "("
    List@40..50
      AConst@40..44
        Sconst@40..44 "'fa'"
      Ascii44@44..45 ","
      Whitespace@45..46 " "
      AConst@46..50
        Sconst@46..50 "'fb'"
  Ascii41@50..51 ")"
  Ascii59@51..52 ";"

