crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@29.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into quadtable (f1, q.c1.r, q.c2.i) values(44,55,66);"
---
InsertStmt@0..60
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..21
    Ident@12..21 "quadtable"
  Whitespace@21..22 " "
  Ascii40@22..23 "("
  ResTarget@23..25
    Ident@23..25 "f1"
  Ascii44@25..26 ","
  Whitespace@26..27 " "
  ResTarget@27..33
    Ident@27..28 "q"
    Ascii46@28..29 "."
    Ident@29..31 "c1"
    Ascii46@31..32 "."
    Ident@32..33 "r"
  Ascii44@33..34 ","
  Whitespace@34..35 " "
  ResTarget@35..41
    Ident@35..36 "q"
    Ascii46@36..37 "."
    Ident@37..39 "c2"
    Ascii46@39..40 "."
    Ident@40..41 "i"
  Ascii41@41..42 ")"
  Whitespace@42..43 " "
  SelectStmt@43..58
    Values@43..49 "values"
    Ascii40@49..50 "("
    List@50..58
      AConst@50..52
        Iconst@50..52 "44"
      Ascii44@52..53 ","
      AConst@53..55
        Iconst@53..55 "55"
      Ascii44@55..56 ","
      AConst@56..58
        Iconst@56..58 "66"
  Ascii41@58..59 ")"
  Ascii59@59..60 ";"

